German/Lenguajes y compiladores/Lab3/tests/bad/bad02.imp
-- not declared type variable
data N = O | S <a>

